--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -414,7 +414,7 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
 #slideshow-container header button{
   background-color: #BBB;
 }
-#slideshow {
+#slideshow, #slideshow .sample {
     position: absolute;
     top:0;
     width:100%;
@@ -423,12 +423,19 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    background-color: ivory;
 }
+#slideshow {
+  background-color: ivory;
+}
+#slideshow .sample{
+  z-index: 200;
+  background: #d6d7df;
+}
+
 #slideshow-container.hidden{
     display: none;
 }
-#slideshow.vertical{
+#slideshow.vertical, #slideshow.vertical .sample{
     flex-direction: column;
 }
 .slider-nav{
@@ -517,6 +524,7 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
       opacity: 0.4;
     }
   }
+
 .steps .steps-content{font-size: 2em;}
 .w3-animate-fading{animation:fading 10s infinite}@keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:0}}
 .w3-animate-opacity{animation:opac 0.8s}@keyframes opac{from{opacity:0} to{opacity:1}}
@@ -773,6 +781,315 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
       background-position: -200% 0;
     }
   }
-  .katex {
+  /*.katex {
     line-height: 1.8em;
+  }*/
+
+#countdown-container{
+  position: absolute;
+  z-index: 5000;
+  top:0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #0275D8;
+  font-family: Helvetica, Arial, sans-serif;
+}
+.demo {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 500px;
+  height: 140px;
+  margin-top: -70px;
+  padding: 10px;
+  border-radius: 20px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+.demo__colored-blocks {
+  overflow: hidden;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 500px;
+  height: 100%;
+  margin-left: -250px;
+  padding: 10px;
+  border-radius: 20px;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+  -webkit-animation: demoAnim 4s ease-in-out 1, contAnim 4s 1;
+          animation: demoAnim 4s ease-in-out 1, contAnim 4s 1;
+}
+.demo__colored-blocks-rotater {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  -webkit-animation: rotation 1.3s linear 1;
+          animation: rotation 1.3s linear 1;
+}
+.demo__colored-blocks-inner {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  background: #32386d;
+  border-radius: inherit;
+}
+.demo__colored-block {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 300%;
+  height: 300%;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+}
+.demo__colored-block:nth-child(1) {
+  -webkit-transform: rotate(0deg) skewX(-30deg);
+          transform: rotate(0deg) skewX(-30deg);
+  background-color: #fd3359;
+}
+.demo__colored-block:nth-child(2) {
+  -webkit-transform: rotate(120deg) skewX(-30deg);
+          transform: rotate(120deg) skewX(-30deg);
+  background-color: #f4d302;
+}
+.demo__colored-block:nth-child(3) {
+  -webkit-transform: rotate(240deg) skewX(-30deg);
+          transform: rotate(240deg) skewX(-30deg);
+  background-color: #21bdff;
+}
+.demo__inner {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.demo__numbers {
+  overflow: visible;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100px;
+  height: 100px;
+  margin-left: -50px;
+  margin-top: -50px;
+}
+.demo__numbers-path {
+  fill: none;
+  stroke-width: 10px;
+  stroke: #fff;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 0, 518.055065155;
+  stroke-dashoffset: 0;
+  -webkit-animation: numAnim 4s ease-in-out 1;
+          animation: numAnim 4s ease-in-out 1;
+  opacity: 0;
+}
+.demo__text {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 500px;
+  height: 100%;
+  margin-left: -250px;
+  text-align: center;
+  line-height: 140px;
+  font-size: 100px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+  -webkit-animation: hideText 4s 1;
+          animation: hideText 4s 1;
+}
+
+@-webkit-keyframes contAnim {
+  15%,
+  100% {
+    margin-left: -250px;
+    width: 500px;
   }
+  25%,
+  90% {
+    margin-left: -70px;
+    width: 140px;
+  }
+}
+
+@keyframes contAnim {
+  15%,
+  100% {
+    margin-left: -250px;
+    width: 500px;
+  }
+  25%,
+  90% {
+    margin-left: -70px;
+    width: 140px;
+  }
+}
+@-webkit-keyframes numAnim {
+  15% {
+    stroke-dasharray: 0, 518.055065155;
+    stroke-dashoffset: 0;
+    opacity: 0;
+  }
+  25%,
+  41% {
+    opacity: 1;
+    stroke-dasharray: 144.4256591797, 518.055065155;
+    stroke-dashoffset: -40;
+  }
+  53%,
+  66% {
+    stroke-dasharray: 136.0216217041, 518.055065155;
+    stroke-dashoffset: -227.238697052;
+  }
+  76% {
+    stroke-dasharray: 113.4751205444, 518.055065155;
+    stroke-dashoffset: -445.8995704651;
+  }
+  88%,
+  100% {
+    stroke-dasharray: 72.1554946899, 518.055065155;
+    stroke-dashoffset: -445.8995704651;
+  }
+  92% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes numAnim {
+  15% {
+    stroke-dasharray: 0, 518.055065155;
+    stroke-dashoffset: 0;
+    opacity: 0;
+  }
+  25%,
+  41% {
+    opacity: 1;
+    stroke-dasharray: 144.4256591797, 518.055065155;
+    stroke-dashoffset: -40;
+  }
+  53%,
+  66% {
+    stroke-dasharray: 136.0216217041, 518.055065155;
+    stroke-dashoffset: -227.238697052;
+  }
+  76% {
+    stroke-dasharray: 113.4751205444, 518.055065155;
+    stroke-dashoffset: -445.8995704651;
+  }
+  88%,
+  100% {
+    stroke-dasharray: 72.1554946899, 518.055065155;
+    stroke-dashoffset: -445.8995704651;
+  }
+  92% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes rotation {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotation {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes demoAnim {
+  15% {
+    border-radius: 20px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  30%,
+  43% {
+    border-radius: 50%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  52%,
+  65% {
+    border-radius: 0;
+    -webkit-transform: rotate(720deg);
+            transform: rotate(720deg);
+  }
+  78%,
+  90% {
+    border-radius: 50%;
+    -webkit-transform: rotate(1080deg);
+            transform: rotate(1080deg);
+  }
+  100% {
+    border-radius: 20px;
+    -webkit-transform: rotate(1440deg);
+            transform: rotate(1440deg);
+  }
+}
+@keyframes demoAnim {
+  15% {
+    border-radius: 20px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  30%,
+  43% {
+    border-radius: 50%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  52%,
+  65% {
+    border-radius: 0;
+    -webkit-transform: rotate(720deg);
+            transform: rotate(720deg);
+  }
+  78%,
+  90% {
+    border-radius: 50%;
+    -webkit-transform: rotate(1080deg);
+            transform: rotate(1080deg);
+  }
+  100% {
+    border-radius: 20px;
+    -webkit-transform: rotate(1440deg);
+            transform: rotate(1440deg);
+  }
+}
+@-webkit-keyframes hideText {
+  15%,
+  100% {
+    opacity: 1;
+  }
+  20%,
+  96% {
+    opacity: 0;
+  }
+}
+@keyframes hideText {
+  15%,
+  100%{
+    opacity: 1;
+  }
+  20%,
+  96% {
+    opacity: 0;
+  }
+}
