Ajout d'un bouton pour (dé)sélectionner toutes les options d'une activité, correction d'un bug d'affichage

--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -24,6 +24,9 @@
 #app-container.hidden {
   display:none;
 }
+.bold {
+  font-weight: bold;
+}
 /* Range input, from http://danielstern.ca/range.css/ */
 input[type=range] {
   -webkit-appearance: none;
