--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -46,8 +46,8 @@ mark {
   text-align: center;
   padding: 1.5rem;
   border-radius: 8px;
-  background: linear-gradient(85deg,#483b72,#292a4b);
-  color: #fff;
+  background: linear-gradient(85deg,#f8f6fd,#d7d7e0);
+  color: rgb(26, 24, 43);
   display: flex;
   flex-direction: column;
   transition: .2s;
