--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -322,6 +322,12 @@ ul.menu, .menu ul {
   position: absolute;
   display:block;
   cursor: url(../img/iconfinder_pencil.png), auto;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .MMjsx {
   font-size: 2em;
