--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -86,15 +86,16 @@ mark {
   padding: 4px 10px 4px;
 }
 /* Range input, from http://danielstern.ca/range.css/ */
-input[type=range] {
+
+#tab-parameters input[type=range] {
   -webkit-appearance: none;
   width: 100%;
   margin: 5.9px 0;
 }
-input[type=range]:focus {
+#tab-parameters input[type=range]:focus {
   outline: none;
 }
-input[type=range]::-webkit-slider-runnable-track {
+#tab-parameters input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 8.2px;
   cursor: pointer;
@@ -103,7 +104,7 @@ input[type=range]::-webkit-slider-runnable-track {
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
-input[type=range]::-webkit-slider-thumb {
+#tab-parameters input[type=range]::-webkit-slider-thumb {
   box-shadow: 1.4px 1.4px 1.4px #020000, 0px 0px 1.4px #1c0000;
   border: 1px solid #000000;
   height: 20px;
@@ -114,10 +115,10 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   margin-top: -6.1px;
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
+#tab-parameters input[type=range]:focus::-webkit-slider-runnable-track {
   background: #2d7fbe;
 }
-input[type=range]::-moz-range-track {
+#tab-parameters input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.2px;
   cursor: pointer;
@@ -126,7 +127,7 @@ input[type=range]::-moz-range-track {
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
-input[type=range]::-moz-range-thumb {
+#tab-parameters input[type=range]::-moz-range-thumb {
   box-shadow: 1.4px 1.4px 1.4px #020000, 0px 0px 1.4px #1c0000;
   border: 1px solid #000000;
   height: 20px;
@@ -135,7 +136,7 @@ input[type=range]::-moz-range-thumb {
   background: #ffffff;
   cursor: pointer;
 }
-input[type=range]::-ms-track {
+#tab-parameters input[type=range]::-ms-track {
   width: 100%;
   height: 8.2px;
   cursor: pointer;
@@ -143,19 +144,19 @@ input[type=range]::-ms-track {
   border-color: transparent;
   color: transparent;
 }
-input[type=range]::-ms-fill-lower {
+#tab-parameters input[type=range]::-ms-fill-lower {
   background: #236394;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type=range]::-ms-fill-upper {
+#tab-parameters input[type=range]::-ms-fill-upper {
   background: #2871a9;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type=range]::-ms-thumb {
+#tab-parameters input[type=range]::-ms-thumb {
   box-shadow: 1.4px 1.4px 1.4px #020000, 0px 0px 1.4px #1c0000;
   border: 1px solid #000000;
   height: 20px;
@@ -165,10 +166,10 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
   height: 8.2px;
 }
-input[type=range]:focus::-ms-fill-lower {
+#tab-parameters input[type=range]:focus::-ms-fill-lower {
   background: #2871a9;
 }
-input[type=range]:focus::-ms-fill-upper {
+#tab-parameters input[type=range]:focus::-ms-fill-upper {
   background: #2d7fbe;
 }
 
@@ -340,6 +341,22 @@ ul.menu, .menu ul {
 .colsx2 #activityOptions > span {
   display:inline-block;
   width: 100%;
+}
+/* Zoom */
+.zoom-a0{
+  font-size: 0.5em;
+}
+.zoom-A1{
+  font-size: 1.2em;
+}
+/* Ranges de taille de texte */
+#slideshow-container input[type=range], #tab-enonce input[type=range], #tab-corrige input[type=range]{
+  vertical-align: middle;
+  width: 40px;
+  margin: 0 2pt;
+}
+.zoom {
+  display: inline-block;
 }
 /* tab-chercher */
 #tab-chercher li{
